--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ backlistres = backlistres.txt
 # Копировать ли карту с файлами
 copymode = 1
 # Куда копировать карту
-copydir = .\maps
+copydir = maps
 # Копировать ли карту, если есть ошибки (0 - копировать, 1 - выводить ошибку, с возможностью копирования 2 - не копировать)
 copyiferrors = 1
 # Создовать ли res файл (если copymode=1, создает в copydir, если 0 - в папке с картой)
@@ -12,3 +12,5 @@ genresfile = 1
 showresfie = 1
 # Проверять ли наличие файлов по res списку (автоматически работает при copymode=1)
 testfilelist = 1
+# Куда создавать маппак
+packdir = mappack
